[gd_scene load_steps=5 format=3 uid="uid://c1o3pnr3ownun"]

[ext_resource type="Script" path="res://Personajes/JugadorGotas.gd" id="1_o1gcp"]
[ext_resource type="Texture2D" uid="uid://dvbfajg84mty6" path="res://Sprites/Personajes/spritesheet.png" id="2_fxx6y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f3pid"]
size = Vector2(34.6667, 75.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o3kyc"]
size = Vector2(10.9323, 53.7791)

[node name="JugadorGotas" type="CharacterBody2D"]
position = Vector2(303, 119)
scale = Vector2(1.5, 1.5)
script = ExtResource("1_o1gcp")
move_speed = 250.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.227414, 0.190031)
texture = ExtResource("2_fxx6y")
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("RectangleShape2D_f3pid")

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, 8)
scale = Vector2(3.293, 1.3636)
shape = SubResource("RectangleShape2D_o3kyc")

[node name="HealthBar" type="ProgressBar" parent="."]
self_modulate = Color(1, 0, 0, 1)
offset_left = -25.0
offset_top = -46.0
offset_right = 73.0
offset_bottom = -19.0
scale = Vector2(0.511194, 0.34283)
max_value = 5.0
step = 1.0
value = 5.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HealthLabel" type="Label" parent="."]
offset_left = -15.0
offset_top = -61.0
offset_right = 32.0
offset_bottom = -35.0
scale = Vector2(0.593849, 0.466844)
text = "HP: 5"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
